--- a/Layout gen/public/index.html
+++ b/Layout gen/public/index.html
@@ -26,7 +26,7 @@
     
       </div> -->
       <div id="root"></div>
-  <h1>Generated Layout</h1>
+  <h1></br>Generated Layouts</h1>
   <div>
     <canvas id="canvas">
     <!-- just in case of a really old system -->
