--- a/Layout gen/public/index.html
+++ b/Layout gen/public/index.html
@@ -8,6 +8,8 @@
   
 </head>
 <body>
+  <h5>Please click the checkbox after all details of question have been put in and recheck if changes are made.</h5>
+</br>
 
     <!-- <div id="settings">
 
